...
            <Image
              source={images.logoSmall}
              resizeMode='contain'
              className="w-[105px] h-[100px]"
            />
            <Text className="text-2xl text-black text-semibold mt-10 font-psemibold">
              Log in to MakanMeter
            </Text>

            <FormField
              title="Email"
              value={form.email}
              handleChangeText={(e) => setForm({ ...form, email: e })}
...
              <TouchableOpacity onPress={() => { router.navigate('forget_password') }}>
                <Text className='text-emerald font-semibold'>Forgot Password?</Text>
              </TouchableOpacity>
            </View>

            <CustomButton
              title="Login"
              containerStyles="bg-emerald"
              handlePress={submit}
              isLoading={isSubmitting}
            />

            <View className="justify-center pt-5 flex-row gap-2">
...
