...
//import the custom icons from the constants folder
import { icons } from '../../constants';



const TabArr = [
  { route: 'home', label: 'Home', icon: icons.home},
  { route: 'analyse', label: 'Analyse', icon: icons.analyse},
  { route: 'add_food', label: 'Add', icon: icons.plus},
  { route: 'plan', label: 'Plan', icon: icons.plan},
  { route: 'more', label: 'More', icon: icons.more},
];

...
      textRef.current.transitionTo({ scale: 0 });
    }
  }, [focused])

  return (
    <TouchableOpacity
      testID='navigate-tab'
      onPress={combinedPressHandler}
      activeOpacity={1}
      style={styles.container}>
      <Animatable.View
        ref={viewRef}
        duration={700}
...
