...
      </Text>
      <View style={styles.pickerContainer}>
        <TouchableOpacity testID='option-female' style={styles.option} onPress={() => setGender('female')}>
          <Text style={styles.optionText}>👩 Female</Text>
          <View style={gender === 'female' ? styles.selectedCircle : styles.circle} />
        </TouchableOpacity>
        <TouchableOpacity  testID='option-male' style={styles.option} onPress={() => setGender('male')}>
          <Text style={styles.optionText}>👨 Male</Text>
          <View style={gender === 'male' ? styles.selectedCircle : styles.circle} />
        </TouchableOpacity>
        <TouchableOpacity testID='option-none' style={styles.option} onPress={() => setGender('default')}>
          <Text style={styles.optionText}>Prefer not to say</Text>
          <View style={gender === 'default' ? styles.selectedCircle : styles.circle} />
        </TouchableOpacity>
      </View>
      <CustomButton 
          title="Next"
          containerStyles="bg-emerald"
          handlePress={handleNext}
      />
    </SafeAreaView>
  );
};
...
