...
  };

  return (
      <SafeAreaView className='h-full justify-center p-5 bg-white'>
         <TouchableWithoutFeedback onPress={() => Keyboard.dismiss()} accessible={false}>
            <View className='items-center'>
              <Text style={styles.title}>What is your goal daily caloric intake ?</Text>
              <View className='flex-row items-center my-5'>
                <TextInput 
                    testID='calorie-input'
                    className='flex-1 flex-row border h-[50px] 
                        rounded-lg px-5 text-xl font-semibold'
                    placeholder='Enter here'
                    keyboardType='numeric' 
                    value={calorieGoal}
                    onChangeText={setCalorieGoal}
...
