...
    }]
  };

  return (
    <>
      <TouchableOpacity
        testID='add-food-button'
        style={{ justifyContent: 'center', alignItems: 'center', top: -15 }}
        activeOpacity={0.9}
        onPress={combinedPressHandler}
      >
        <View 
          testID="add-food-button-inner" 
...
