...
        ))}
      </View>
    );
  };

  return (
    <View testID='progressOverview' style={styles.scrollableArea}>
      <FlatList
        data={displayData} // Array of data for each dashboard
        renderItem={renderDashboardItem}
        keyExtractor={(item, index) => index.toString()}
        horizontal
        pagingEnabled
...
