...
        }
    }

    return (
        <View style={styles.searchContainer}>
            <TextInput
                testID='search-bar'
                style={styles.searchInput}
                placeholder="Search for a food"
                value={query}
                onChangeText={handleSearchChange}
                onFocus={() => setIsFocused(true)}
            />
...
