...
  };
  

  return (
    <>
    <TouchableOpacity
      testID='log-list-item'
      style={[styles.button, { borderColor }]}
      activeOpacity={0.7}
      onPress={() => {bottomSheetModalRef.current?.present();}}
    >
      <View style={{ flex: 1, gap: 1.5 }}>
        <Text style={styles.foodName}>{item.food_name}</Text>
...
