appId: com.bingchillingz1712.MakanMeter
---
- openLink: exp://192.168.1.30:8081
- tapOn: Login
- assertVisible:
      text: Log in to MakanMeter
- tapOn: 
      id: 'email-input'
- inputText: "test456@gmail.com"
- tapOn: 
      id: 'password-input'
- inputText: "test456!"
- pressKey: Enter
- tapOn: Login
- tapOn: Ok
- assertVisible:
      text: Home
