appId: com.bingchillingz1712.MakanMeter
---
- openLink: exp://192.168.1.30:8081
- tapOn: 
      id: 'add-food-button'
- waitForAnimationToEnd:
    timeout: 5000
- tapOn: Edit Goals
- tapOn: Select Goal Type
- tapOn: Weight  
- tapOn: Enter weight  
- inputText: 80
- pressKey: Enter
- tapOn: Submit Changes
- tapOn: OK
- assertVisible:
      text: '80.0 Kg'
- pressKey: Back
- tapOn: 
      id: 'navigate-tab'
      index: 1
- scrollUntilVisible:
     element:
        id: 'progressOverview'
     visibilityPercentage: 100
     centerElement: true
- assertVisible:
      text: 'Goal: 80.0 kg'