appId: com.bingchillingz1712.MakanMeter
---
- openLink: exp://192.168.1.30:8081
- scrollUntilVisible:
    element: 
          id: 'add-button'
          index: 2 
- tapOn: 
      id: 'add-button'
      index: 2 
- tapOn: 
      id: 'search-bar'
- inputText: Laksa
- pressKey: Enter
- tapOn: 
      id: "list-item"
# - tapOn: 
#       childOf: "list-item"
#       id: "add-button"  
# - pressKey: Back
